# LOCAL-LLM

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_SUMMARY.py  QUICKSTART.md  README.md  RUN.md  SETUP_INSTRUCTIONS.md  client.py  dev.sh  init.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  test_setup.py
app/: __init__.py  config.py  main.py  models.py
app/middleware/: __init__.py  rate_limit.py
app/routes/: __init__.py  llm.py  rag.py
app/services/: __init__.py  ollama_service.py  rag_service.py
app/utils/: __init__.py  exceptions.py  logger.py
tests/: test_routes.py
